force-app/main/default/objects/acheck__CheckList__c/acheck__CheckList__c.object-meta.xml
<CustomObject>
    <customHelpPage>acheck__Checklist_Support</customHelpPage>
    <description>Checklist - a list of items required, done or reminded of</description>
    <label>Checklist</label>
    <nameField>
        <label>Check List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>