force-app/main/default/objects/acheck__CheckList__c/fields/acheck__Code__c.field-meta.xml
<CustomField>
    <fullName>acheck__Code__c</fullName>
    <description>Optional Checklist Code, e.g. for sorting</description>
    <inlineHelpText>Optional Checklist Code, e.g. for sorting</inlineHelpText>
    <label>Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>