force-app/main/default/objects/acheck__CheckList__c/fields/acheck__Description__c.field-meta.xml
<CustomField>
    <fullName>acheck__Description__c</fullName>
    <description>optional description</description>
    <inlineHelpText>optional description</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>