force-app/main/default/objects/acheck__CheckList__c/fields/acheck__InlineEdit__c.field-meta.xml
<CustomField>
    <fullName>acheck__InlineEdit__c</fullName>
    <defaultValue>&apos;None&apos;</defaultValue>
    <description>Default Inline Edit fields to show: all: Task+Record(default), Task Only, Record Only, None - can be overwritten in the Checklist Item Inline
        Edit setting. Inline Edit fields need to be selected in a FieldSet &quot;ChecklistInlineEdit&quot; on Task and Related Object</description>
    <inlineHelpText>Default Inline Edit fields to show: all: Task+Record(default), Task Only, Record Only, None - can be overwritten in the Checklist Item
        Inline Edit setting. Inline Edit fields need to be selected in a FieldSet &quot;ChecklistInlineEdit&quot; on Task and Related Object</inlineHelpText>
    <label>Inline Edit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Record</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>