force-app/main/default/objects/acheck__CheckList__c/fields/acheck__IsActive__c.field-meta.xml
<CustomField>
    <fullName>acheck__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If Active, the CheckList can be used</description>
    <inlineHelpText>If Active, the CheckList can be used</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>