force-app/main/default/objects/acheck__CheckList__c/fields/acheck__IsApplyOnlyOnce__c.field-meta.xml
<CustomField>
    <fullName>acheck__IsApplyOnlyOnce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, you can add checklist tasks just once per record</description>
    <inlineHelpText>If selected, you can add checklist tasks just once per record</inlineHelpText>
    <label>Apply only once</label>
    <type>Checkbox</type>
</CustomField>