force-app/main/default/objects/acheck__CheckList__c/fields/acheck__IsManualOnly__c.field-meta.xml
<CustomField>
    <fullName>acheck__IsManualOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The checklist can only be used manually - not in Processes (Process Builder, Trigger, Apex, Flows)</description>
    <inlineHelpText>The checklist can only be used manually - not in Processes (Process Builder, Trigger, Apex, Flows)</inlineHelpText>
    <label>Manual Only</label>
    <type>Checkbox</type>
</CustomField>