force-app/main/default/objects/acheck__CheckList__c/fields/acheck__IsTargetDate__c.field-meta.xml
<CustomField>
    <fullName>acheck__IsTargetDate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Calculate the Due Date of a Task based on a future Target Date (e.g. planned meeting) - manual entry</description>
    <inlineHelpText>Calculate the Due Date of a Task based on a future Target Date (e.g. planned meeting) - manual entry</inlineHelpText>
    <label>Future Target Date</label>
    <type>Checkbox</type>
</CustomField>