force-app/main/default/objects/acheck__CheckList__c/fields/acheck__ItemCount__c.field-meta.xml
<CustomField>
    <fullName>acheck__ItemCount__c</fullName>
    <description>Number of active Checklist Items</description>
    <inlineHelpText>Number of active Checklist Items</inlineHelpText>
    <label>Item Count</label>
    <summaryFilterItems>
        <field>acheck__CheckListItem__c.acheck__IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>acheck__CheckListItem__c.acheck__CheckList__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>