force-app/main/default/objects/acheck__CheckList__c/fields/acheck__OnlyforObject__c.field-meta.xml
<CustomField>
    <fullName>acheck__OnlyforObject__c</fullName>
    <description>Restrict CheckList to specific objects, e.g Account, MyObject__c</description>
    <inlineHelpText>Restrict CheckList to specific objects, e.g Account, MyObject__c</inlineHelpText>
    <label>Only for Object(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>