force-app/main/default/objects/acheck__CheckList__c/fields/acheck__OnlyIfId__c.field-meta.xml
<CustomField>
    <fullName>acheck__OnlyIfId__c</fullName>
    <description>Use this checklist only if the Id of the record matches (i.e. only valid for a particular record)</description>
    <inlineHelpText>Use this checklist only if the Id of the record matches (i.e. only valid for a particular record)</inlineHelpText>
    <label>Only If Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>