force-app/main/default/objects/acheck__CheckList__c/fields/acheck__OnlyIfNameLike__c.field-meta.xml
<CustomField>
    <fullName>acheck__OnlyIfNameLike__c</fullName>
    <description>Use this checklist only if the Name of the record matches (case insensitive)</description>
    <inlineHelpText>Use this checklist only if the Name of the record matches (case insensitive)</inlineHelpText>
    <label>Only if Name Like</label>
    <length>60</length>
    <type>Text</type>
</CustomField>