force-app/main/default/objects/acheck__CheckList__c/fields/acheck__OnlyIfValid__c.field-meta.xml
<CustomField>
    <fullName>acheck__OnlyIfValid__c</fullName>
    <description>Use this checklist only if the expression is valid (basically where clause) - requires Only For Object 
- example for Account: Rating = &apos;Warm&apos;</description>
    <inlineHelpText>Use this checklist only if the expression is valid (basically where clause) - requires Only For Object 
- example for Account: Rating = &apos;Warm&apos;</inlineHelpText>
    <label>Only if valid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>