force-app/main/default/objects/acheck__CheckList__c/fields/acheck__Recurring_Cancel_Status__c.field-meta.xml
<CustomField>
    <fullName>acheck__Recurring_Cancel_Status__c</fullName>
    <description>Optional - when a new recurring checklist is added, cancel the previous instance tasks with status</description>
    <inlineHelpText>Optional - when a new recurring checklist is added, cancel the previous instance tasks with status</inlineHelpText>
    <label>Recurring Cancel Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>