force-app/main/default/objects/acheck__CheckList__c/fields/acheck__Recurring_Offset__c.field-meta.xml
<CustomField>
    <fullName>acheck__Recurring_Offset__c</fullName>
    <description>Add Checklist Tasks for Record Instances in Days after the last instance was added
        (based on added/created date, not completion date)
        E.g., 365 - creates the next instance one year after the last instance was created</description>
    <inlineHelpText>Add Checklist Tasks for Record Instances in Days after the last instance was added
        (based on added/created date, not completion date)
        E.g., 365 - creates the next instance one year after the last instance was created</inlineHelpText>
    <label>Recurring Offset</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>