force-app/main/default/objects/acheck__CheckList__c/fields/acheck__Recurring_WeekDays__c.field-meta.xml
<CustomField>
    <fullName>acheck__Recurring_WeekDays__c</fullName>
    <description>Add Checklist Tasks for Record Instances on Week Day after the last instance was added
        (based on added/created date, not completion date)</description>
    <inlineHelpText>Add Checklist Tasks for Record Instances on Week Day after the last instance was added
        (based on added/created date, not completion date)</inlineHelpText>
    <label>Recurring Week Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mo</fullName>
            </value>
            <value>
                <fullName>Tu</fullName>
            </value>
            <value>
                <fullName>We</fullName>
            </value>
            <value>
                <fullName>Th</fullName>
            </value>
            <value>
                <fullName>Fr</fullName>
            </value>
            <value>
                <fullName>Sa</fullName>
            </value>
            <value>
                <fullName>Su</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>