force-app/main/default/objects/acheck__CheckList__c/fields/acheck__TargetDate_Dynamic__c.field-meta.xml
<CustomField>
    <fullName>acheck__TargetDate_Dynamic__c</fullName>
    <description>Optional reference in the base record to find a future Target Date,
e.g. CloseDate or Meeting_Date__c. It needs to be a date or date time field.  
You can enter/overwrite the Target Date manually when creating the tasks.</description>
    <inlineHelpText>Optional reference in the base record to find a future Target Date,
e.g. CloseDate or Meeting_Date__c. It needs to be a date or date time field.  
You can enter/overwrite the Target Date manually when creating the tasks.</inlineHelpText>
    <label>Dynamic Target Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>