force-app/main/default/objects/acheck__CheckList__c/listViews/acheck__All.listView-meta.xml
<ListView>
    <fullName>acheck__All</fullName>
    <columns>NAME</columns>
    <columns>acheck__IsActive__c</columns>
    <columns>acheck__OnlyforObject__c</columns>
    <columns>acheck__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>